fix alert id parameter
